# graphcalc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  ORIGINAL_REQUEST.md  README.md  TEST_READY.md  funcDeclarations.h  graphcalc.cpp  graphcalc.h  screen_2d_1.txt  screen_2d_10.txt  screen_2d_2.txt  screen_2d_3.txt  screen_2d_4.txt  screen_2d_5.txt  screen_2d_6.txt  screen_2d_7.txt  screen_2d_9.txt  screen_3d_0.txt  screen_3d_1.txt  screen_3d_10.txt  screen_3d_2.txt  screen_3d_4.txt  screen_3d_6.txt  screen_3d_7.txt  screen_3d_8.txt  screen_vis_0.txt  screen_vis_1.txt  screen_vis_2.txt  screen_vis_3.txt  screen_vis_4.txt  screen_vis_5.txt  screen_vis_7.txt
.agents/: BRIEFING.md  handoff.md  original_prompt.md
.agents/auditor_1/: BRIEFING.md  original_prompt.md
.agents/e2e_testing_track/: BRIEFING.md  TEST_INFRA.md  handoff.md  original_prompt.md  progress.md
.agents/explorer_1/: BRIEFING.md  analysis.md  handoff.md  original_prompt.md  progress.md
.agents/orchestrator/: BRIEFING.md  PROJECT.md  context.md  original_prompt.md  plan.md  progress.md
.agents/worker_impl_1/: BRIEFING.md  handoff.md  original_prompt.md  progress.md
.github/workflows/: cmake.yml  codeql.yml
DEBIAN/: control
debian/: changelog
screens/: screen_2d_0.txt  screen_2d_8.txt  screen_3d_3.txt  screen_3d_5.txt  screen_3d_9.txt  screen_vis_6.txt
scripts/: README.md  release.sh  valgrind.sh
src/: colour.hpp  fractal_engine.cpp  fractal_engine.hpp  funcDeclarations.hpp  graph.cpp  graph.hpp  graph3d.cpp  graph3d.hpp  graphcalc.cpp  graphs.cpp  graphs.hpp  input.cpp  input.hpp  linear.cpp  linear.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  opengl_window.cpp  opengl_window.hpp  parser.cpp  parser.hpp  plotter.cpp  plotter.hpp  tui.cpp  tui.hpp
test/: graphcalc_test.cpp  graphcalc_test.hpp
tests/: e2e_test.py
